--- a/Assignment2_1/.classpath
+++ b/Assignment2_1/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX13"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX13"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Flickr"/>
 	<classpathentry kind="output" path="out/production/Assignment2"/>
 </classpath>
