--- a/Assignment2_1/.classpath
+++ b/Assignment2_1/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX13"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX13"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Flickr"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Flickr1"/>
 	<classpathentry kind="output" path="out/production/Assignment2"/>
 </classpath>
